# windows-computer-use-mcp

./: .env.example  .gitignore  AGENTS.md  AGENT_PROTOCOLS.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcpb.json  pyproject.toml  pytest.ini  run_server.py  start.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  industrial-launch.yml
docs/: ARCHITECTURE.md  ASSESSMENT_BY_CURSOR_2026-06-14_CUA_NSIS.md  CUA_PARITY.md  DEVELOPMENT.md  MEMOPS_CUA.md  PRD.md  README.md  ROADMAP.md  SAFETY.md  TESTING.md  TOOLS.md  composing-with-playwright.md  cua-nsis-certification.md  ocr.md  py-stack.md
docs/_stale/: AHK_VS_PYWINAUTO_COMPARISON.md  ASSESSMENT.md  ASSESSMENT_2026-06-08.md  COMPLETE_DOCUMENTATION_STRUCTURE.md  CUA_ASSISTANT_TODO.md  CUA_PARITY_ROADMAP.md  CUA_ROADMAP.md  DESKTOP_APP.md  DOCUMENTATION_INDEX.md  GLAMA_AI_CRITICISM_ANALYSIS.md  GLAMA_AI_PLATFORM.md  LLM_REPO_CONTEXT.md  MCP_PRODUCTION_CHECKLIST.md  OFFICE_BACKGROUND_MATRIX.md  OPERATOR_PROTOCOL.md  ORGANIZATION_SUMMARY.md  RENAME-TO-AUTOMATION-MCP.md  STATUS_REPORT.md  TARGETS_PAGE_SKETCH.md  TOOL_DOCSTRING_MIGRATION.md  USAGE_SCENARIOS.md  desktop-state-tool.md  state-tool-implementation.md
docs/_stale/development/: README.md
docs/_stale/glama-platform/: CI_CD_GLAMA_OPTIMIZATION_GUIDE.md  GLAMA_AI_OPTIMIZATION_SUMMARY.md  GLAMA_AI_RESCAN_GUIDE.md  GLAMA_GITHUB_APP_SETUP.md  GLAMA_INTEGRATION.md  GLAMA_RESCAN_EMAIL.txt  GOLD_STATUS_ACHIEVEMENT.md  GOLD_STATUS_UPDATE_2025_10_08.md  README.md
docs/_stale/legacy/: requirements-fastmcp.txt  requirements_minimal.txt
docs/_stale/mcp-technical/: CLAUDE_DESKTOP_DEBUGGING.md  CONTAINERIZATION_GUIDELINES.md  MCP_PRODUCTION_CHECKLIST.md  MONITORING_STACK_DEPLOYMENT.md  README.md  TROUBLESHOOTING_FASTMCP_2.12.md
docs/_stale/mcpb-packaging/: MCPB_BUILDING_GUIDE.md  MCPB_IMPLEMENTATION_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  README.md
docs/_stale/notepadpp/: COMMUNITY_AND_SUPPORT.md  LANGUAGE_SERVER_PROTOCOL_EXPLAINED.md  MCP_TOOL_CORRUPTION_ISSUE.md  NOTEPADPP_ALTERNATIVES.md  NOTEPADPP_COLOR_FIX_2025_10_08.md  NOTEPADPP_COMPLETE_GUIDE.md  NOTEPADPP_NUCLEAR_REINSTALL_2025_10_08.md  NPP_WHITE_ON_WHITE_BATTLE_PLAN.md  PLUGIN_ECOSYSTEM_COMPREHENSIVE.md  README.md
docs/_stale/repository-protection/: BACKUP_AND_RECOVERY_GUIDE.md  BRANCH_PROTECTION_SETTINGS.md  BRANCH_STRATEGY_AND_AI_WORKFLOW.md  README.md
docs/_stale/serena/: SERENA_COPY_TO_OTHER_REPOS.md  SERENA_GUIDE.md  SERENA_INSTALL_AND_TEST.md  SERENA_NEXT_STEPS.md  SERENA_QUICK_INSTALL.md
examples/: README.md  demo_mouse_dance.py  demo_notepad_typewriter.py  notepad_basic.py
hooks/: runtime-opentelemetry.py
mcpb/: README.md  manifest.json
native/: .gitignore  Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/resources/: .env.example
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
ocr_scans/: ocr_result_1781557747.txt
presets/: notepad_demo.json  screenshot_demo.yaml  screenshot_ocr.json
scratch/: diagnose_paint.py  inspect_tools.py
scripts/: build-mcpb-package.ps1  cua-nsis-config.json  cua-smoke.py  demo-autonomous.py  demo-paint-pelican.py  mcpb-pack.ps1  paint_demo.py  painterly_demo.py  run-workflow.py  text_demo.py  tray-control.py  windows-media-ocr.ps1
scripts/just/: emojibuster.ps1  fleet.just
skills/desktop-automation-protocol/: SKILL.md
src/windows_computer_use_mcp/: .markdownlint.json  __init__.py  __main__.py  agent_overlay.py  app.py  app_profiles.py  assert_engine.py  cli.py  computer_vision.py  config.py  cua_env.py  cua_hud.py  dialog_engine.py  dispatch.py  display_utils.py  face_recognition.py  host_metrics.py  keyboard_send.py  keylogger_service.py  llm_repo_context.py  main.py  mission_store.py  profiles.py  prompts.py  retry.py  retry_policy.py  safety.py  security_endpoints.py  server.py  shortcut_engine.py  snapshot_store.py  sysadmin_client.py  sysadmin_preflight.py  task_engine.py  telemetry.py  telemetry_hud.py  template_library.py  trajectory.py  transport.py  voice_control.py  (+4 more)
src/windows_computer_use_mcp/api/: __init__.py  face_recognition.py  llm.py
src/windows_computer_use_mcp/app_shortcuts/: __init__.py  registry.py  vroidstudio.py
src/windows_computer_use_mcp/core/: __init__.py  config.py  decorators.py
src/windows_computer_use_mcp/desktop_state/: __init__.py  annotator.py  capture.py  formatter.py  ocr.py  walker.py
src/windows_computer_use_mcp/profiles/: notepad.yaml  paint.yaml
src/windows_computer_use_mcp/services/: ocr_service.py
src/windows_computer_use_mcp/tools/: __init__.py  computer_use_compat.py  desktop_state.py  models.py  portmanteau_analyze.py  portmanteau_assert.py  portmanteau_dialog.py  portmanteau_elements.py  portmanteau_face.py  portmanteau_keyboard.py  portmanteau_keylogger.py  (+12 more)
tests/: README.md  conftest.py  conftest_env.py  test_app_integration.py  test_app_profiles.py  test_automation_assert.py  test_automation_dialog.py  test_automation_elements.py  test_automation_keyboard.py  test_automation_mouse.py  test_automation_shortcut.py  test_automation_task.py  test_automation_windows.py  test_cameras_api.py  test_cua_parity.py  test_dependency_failures.py  test_desktop_state.py  test_face_recognition.py  test_face_recognition_api.py  test_mission.py  test_portmanteau_windows_mock.py  test_portmanteau_windows_real.py  test_retry.py  test_safety_api.py  test_template_library.py  test_utils.py
tests/e2e/: conftest.py  test_libreoffice_cua_loop.py
web_sota/: README.md  build-sidecar.ps1  index.html  package.json  start.ps1
web_sota/backend/: server.py
web_sota/e2e/: crawler.spec.ts  dashboard.spec.ts  navigation.spec.ts  rest-api.spec.ts
web_sota/scripts/: install-mcp-clients.ps1  install-tesseract.ps1  start-backend.ps1  update-tauri-starts-link.ps1
web_sota/src/: App.tsx
web_sota/src-tauri/: Cargo.toml  tauri.conf.json
web_sota/src-tauri/src/: backend.rs  mcp_client.rs
web_sota/src-tauri/windows/: hooks.nsh
(+77 files in other folders)
