[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-computer-use-mcp"
version = "0.7.0"
description = "Windows Computer Use for AI Agents — click, screenshot, type, drag, OCR, and verify native Windows UI via MCP. FastMCP 3.2.0 agentic sampling."
readme = "README.md"
authors = [
    {name = "Sandra Schilling", email = "sandra@example.com"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Core MCP framework - FastMCP 3.2.0 (Agentic Sampling)
    "fastmcp>=3.4.0,<4",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0",
    # Windows automation
    "pywinauto>=0.6.8,<1.0.0",
    "pywin32>=311; platform_system=='Windows'",
    "psutil>=5.9.0",
    "pygetwindow>=0.0.9,<1.0.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pynput>=1.7.6",
    # Image processing and OCR
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
    "comtypes>=1.2.0",
    # Security features (optional for face recognition)
    "cryptography>=41.0.0",
    # Utilities
    "typing-extensions>=4.5.0",
    "python-dateutil>=2.8.2",
    "httpx>=0.24.0",
    "aiofiles>=23.1.0",
    "orjson>=3.8.0",
    "prefab-ui>=0.14.0",
    "charset-normalizer>=3.4.5",
]

[project.urls]
Homepage = "https://github.com/sandraschi/windows-computer-use-mcp"
Documentation = "https://github.com/sandraschi/windows-computer-use-mcp#readme"
Issues = "https://github.com/sandraschi/windows-computer-use-mcp/issues"
Source = "https://github.com/sandraschi/windows-computer-use-mcp"

[project.scripts]
windows-computer-use-mcp = "windows_computer_use_mcp.main:main"

[project.optional-dependencies]
face = [
    "face_recognition>=1.3.0",
    "dlib>=19.24.0",
]
windowsmediaocr = [
    "winrt-runtime>=3.2",
    "winrt-Windows.Foundation>=3.2",
    "winrt-Windows.Foundation.Collections>=3.2",
    "winrt-Windows.Storage>=3.2",
    "winrt-Windows.Storage.Streams>=3.2",
    "winrt-Windows.Graphics.Imaging>=3.2",
    "winrt-Windows.Media.Ocr>=3.2",
    "winrt-Windows.Globalization>=3.2",
]

desktop = [
    "pyinstaller>=6.0",
]

all = [
    "windows-computer-use-mcp[face,desktop]",
]

[project.entry-points]
"fastmcp.plugins" = { pywinauto = "windows_computer_use_mcp.plugins:setup_plugin" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "requires_hardware: needs local Windows host (OpenCV/camera/desktop) — skipped in CI",
    "requires_network: needs LAN — skipped in CI",
    "ci_only: contract tests meant for CI — skipped on local unless CI=true",
    "slow: opt-in slow tests",
    "destructive: real UI/input — skipped in CI",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.mcpb]
name = "windows-computer-use-mcp"
display_name = "Windows Computer Use - MCP"
version = "0.4.2"
description = "Windows UI automation with 8 comprehensive portmanteau tools"
entry_point = "windows_computer_use_mcp.main:app"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = [
    "S101",
    "B008",
    "E501",
    "B904",
    "S110",
    "E722",
    "S603",
    "S607",
    "S602",
    "S301",
    "S112",
    "S104",
    "S606",
    "UP047",
    "RUF012",
    "RUF002",
]

[tool.ruff.lint.per-file-ignores]
# Examples tweak sys.path before importing sibling helpers
"examples/demo_notepad_grid.py" = ["E402"]
"examples/demo_notepad_typewriter.py" = ["E402"]
"src/windows_computer_use_mcp/security_endpoints.py" = ["E402"]
"src/windows_computer_use_mcp/tools/portmanteau_face.py" = ["E402"]
"src/windows_computer_use_mcp/tools/portmanteau_mission.py" = ["E402"]
"scripts/*" = ["S310", "S603", "S604"]
"scratch/**" = ["B023"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.1",
    "pytest-html>=4.0.0",
    "pytest-timeout>=2.1.0",
    # Code quality
    "ruff>=0.9.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    # Documentation
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.15",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-autorefs>=0.4.1",
    # Type stubs
    "types-psutil>=5.9.0",
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.28.0",
    # Build
    "pyinstaller>=6.20.0",
]
